--- a/beranda.html
+++ b/beranda.html
@@ -140,7 +140,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark lighthen-3 scrolling-navbar">
     <div class="container">
 
       <!-- Brand -->
@@ -364,7 +364,7 @@
             <h1 class="mb-3">Sensor Gas (MQ-2)</h2>
             <div class="row">
               <div class="col-md-12 mb-3">
-                <div class="card bg-primary">
+                <div class="card" style="background-color: #01c8ee;">
                   <div class="card-body">
                     <div class="card-title">
                       <h4>Gas LPG</h4>
@@ -382,7 +382,7 @@
               </div>
 
               <div class="col-md-12 mb-3">
-                <div class="card bg-danger">
+                <div class="card" style="background-color: #01c8ee;">
                   <div class="card-body">
                     <div class="card-title">
                       <h4>Gas CO</h4>
@@ -400,7 +400,7 @@
               </div>
 
               <div class="col-md-12">
-                <div class="card bg-success">
+                <div class="card" style="background-color: #01c8ee;">
                   <div class="card-body">
                     <div class="card-title">
                       <h4>Smoke</h4>
@@ -426,7 +426,7 @@
             <h1 class="mb-3">Sensor Suhu (DHT11)</h1>
             <div class="row">
               <div class="col-md-6 mb-3">
-                <div class="card bg-info">
+                <div class="card" style="background-color: #01c8ee;">
                   <div class="card-body">
                     <div class="card-title">
                       <h4>Derajat Celcius</h4>
@@ -443,7 +443,7 @@
                 </div>
               </div>
               <div class="col-md-6 mb-3">
-                <div class="card bg-warning">
+                <div class="card" style="background-color: #01c8ee;">
                   <div class="card-body">
                     <div class="card-title">
                       <h4>Heat Celcius</h4>
@@ -461,7 +461,7 @@
               </div>
 
               <div class="col-md-6 mb-3">
-                <div class="card bg-secondary">
+                <div class="card" style="background-color: #01c8ee;">
                   <div class="card-body">
                     <div class="card-title">
                       <h4>Derajat Fahrenheit</h4>
@@ -478,7 +478,7 @@
                 </div>
               </div>
               <div class="col-md-6 mb-3">
-                <div class="card">
+                <div class="card" style="background-color: #01c8ee;">
                   <div class="card-body">
                     <div class="card-title">
                       <h4>Heat Fahrenheit</h4>
@@ -495,7 +495,7 @@
                 </div>
               </div>
               <div class="col-md-12">
-                <div class="card">
+                <div class="card" style="background-color: #01c8ee;">
                   <div class="card-body">
                     <div class="card-title text-center">
                       <h4>Kelembapan</h4>
