--- a/beranda.html
+++ b/beranda.html
@@ -10,9 +10,9 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>SKIOT</title>
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.3.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.3.0/css/all.css">
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
@@ -360,11 +360,11 @@
       <!--Section: Main features & Quick Start-->
       <section class="">
         <div class="row">
-          <div class="col-md-6 h-100 mb-5">
+          <div class="col-md-6 mb-5">
             <h1 class="mb-3">Sensor Gas (MQ-2)</h2>
             <div class="row">
-              <div class="col-md-12 mb-3">
-                <div class="card" style="background-color: #87cefa;">
+              <div class="col-md-6 mb-3">
+                <div class="card h-100" style="background-color: #87cefa;">
                   <div class="card-body">
                     <div class="card-title">
                       <h4>Gas LPG</h4>
@@ -381,7 +381,7 @@
                 </div>
               </div>
 
-              <div class="col-md-12 mb-3">
+              <div class="col-md-6 mb-3">
                 <div class="card" style="background-color: #87cefa;">
                   <div class="card-body">
                     <div class="card-title">
@@ -400,7 +400,7 @@
               </div>
 
               <div class="col-md-12">
-                <div class="card" style="background-color: #87cefa;">
+                <div class="card h-100" style="background-color: #87cefa;">
                   <div class="card-body">
                     <div class="card-title">
                       <h4>Smoke</h4>
@@ -422,11 +422,11 @@
 
           <hr class="my-5">
 
-          <div class="col-md-6 h-100">
+          <div class="col-md-6">
             <h1 class="mb-3">Sensor Suhu (DHT11)</h1>
             <div class="row">
               <div class="col-md-6 mb-3">
-                <div class="card" style="background-color: #87cefa;">
+                <div class="card h-100" style="background-color: #87cefa;">
                   <div class="card-body">
                     <div class="card-title">
                       <h4>Derajat Celcius</h4>
@@ -644,14 +644,14 @@
         $.getJSON('https://blynk.cloud/external/api/isHardwareConnected?token=M8r1JtoTj2zF7UwGxDo9FUyBr-4Di7U7', function(data){
           console.log(data)
             if(data == true){
-              data = "Active";
+              data = "Online";
               $('#alert').html(`
-                <i class="fas fa-check text-success"></i><span class="text-success">`+ data +`</span>
+                <i class="fas fa-wifi text-success"></i><span class="text-success"> `+ data +`</span>
               `);
             }else{
               data = "Offline";
               $('#alert').html(`
-                <i class="fas fa-times text-danger"></li><span class="text-danger">`+ data +`</span>
+                <i class="fas fa-wifi-slash text-danger"></li><span class="text-danger"> `+ data +`</span>
               `);
             }
           })
@@ -901,7 +901,6 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
   <!-- Initializations -->
   <!-- <script src="javascript.js"></script> -->
   
