--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             background-color: transparent;
         }
         .header{
-            line-height: 600px;
-            font-size: 100px;
+            height: 590px;
+            font-size: 72px;
             color: white;
             text-align: center;
             background-image: url('images/bg1.jpg');
@@ -22,6 +22,41 @@
             background-color: rgba(0, 0, 0, 0.5);
             animation: change 120s infinite ease;
         }
+        @keyframes change {
+            0%{
+              background-image: url('images/bg7.jpg');
+            }
+            10%{
+              background-image: url('images/bg1.jpg');
+            }
+            20%{
+              background-image: url('images/bg2.jpg');
+            }
+            30%{
+              background-image: url('images/bg3.jpg');
+            }
+            40%{
+              background-image: url('images/bg4.jpg');
+            }
+            50%{
+              background-image: url('images/bg5.jpg');
+            }
+            60%{
+              background-image: url('images/bg6.jpg');
+            }
+            70%{
+              background-image: url('images/bg7.jpg');
+            }
+            80%{
+              background-image: url('images/bg8.jpg');
+            }
+            90%{
+              background-image: url('images/bg9.jpg');
+            }
+            100%{
+              background-image: url('images/bg10.jpg');
+            }
+          }
     </style>
 </head>
 
