--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             background-color: transparent;
         }
         .header{
-            height: 590px;
+            min-height: 590px;
+            height: 100%;
             font-size: 72px;
             color: white;
             text-align: center;
