--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: transparent;
         }
         .header{
-            min-height: 590px;
+            min-height: 600px;
             height: 100%;
             font-size: 72px;
             color: white;
@@ -107,7 +107,7 @@
     
    
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script>
+    <!-- <script>
         $(document).ready(function(){
             var bg=[0,1,2,3,4,5,6,7,8,9];
                 var index=0;
@@ -116,7 +116,7 @@
             $('img').css('background-image','url("images/bg'+index+'.jpg")');
             },5000);
           });
-      </script>
+      </script> -->
       <!-- <script>
     $(document).ready(function(){
         var bg=[0,1,2,3,4,5,6,7,8,9];
