--- a/beranda.html
+++ b/beranda.html
@@ -341,9 +341,9 @@
                   <!-- <input type="hidden" id="off" value="1">
                   <input type="hidden" id="on" value="0">
                   <button class="btn btn-md btn-danger mb-1" value="1" id="kitchen-room-off" style="text-transform: uppercase;"><i class="fas fa-power-off"></i> off</button> -->
-                  <button class="btn rounded d-flex justify-content-center" value="0" id="kitchen-room-on" style="height: 90px; width: 90px; margin: auto 0;"><i class="fas fa-lightbulb" style="font-size: 40px; margin-top: 10px;"></i></button>
+                  <button class="btn rounded d-flex justify-content-center" value="0" id="fan-on" style="height: 90px; width: 90px; margin: auto 0;"><i class="fas fa-lightbulb" style="font-size: 40px; margin-top: 10px;"></i></button>
                 </div>
-                <div class="alert-kitchen d-flex justify-content-center">
+                <div class="alert-fan d-flex justify-content-center">
 
                 </div>
               </div>
@@ -354,7 +354,7 @@
             <div class="card">
               <div class="card-body">
                 <div class="card-title">
-                  <h6 class="text-center">Semua Ruangan</h6>
+                  <h6 class="text-center">Semua Devices</h6>
                 </div>
                 <div class="d-flex justify-content-center mb-2">
                   <!-- <input type="hidden" id="off" value="1">
@@ -665,7 +665,7 @@
           console.log(data);
           if(data == '0'){
             $('.alert-kitchen').html(`
-              <span class="alert alert-danger">Lampu Dapur Mati</span>
+              <span class="alert alert-danger" style="font-size: 10px;">Lampu Dimatikan</span>
             `);
             $('#kitchen-room-on').removeClass('btn-success');
             $('#kitchen-room-on').addClass('btn-danger');
@@ -675,7 +675,7 @@
             })
           }else{
             $('.alert-kitchen').html(`
-              <span class="alert alert-success">Lampu Dapur Nyala</span>
+              <span class="alert alert-success" style="font-size: 10px;">Lampu Dinyalakan</span>
             `);
             $('#kitchen-room-on').removeClass('btn-danger');
             $('#kitchen-room-on').addClass('btn-success');
@@ -698,7 +698,7 @@
           console.log(data);
           if(data == '0'){
             $('.alert-living').html(`
-              <span class="alert alert-danger">Lampu Tamu Mati</span>
+              <span class="alert alert-danger" style="font-size: 10px;">Lampu Dimatikan</span>
             `);
             $('#living-room').removeClass('btn-success');
             $('#living-room').addClass('btn-danger');
@@ -708,7 +708,7 @@
             })
           }else{
             $('.alert-living').html(`
-              <span class="alert alert-success">Lampu Tamu Nyala</span>
+              <span class="alert alert-success" style="font-size: 10px;">Lampu Dinyalakan</span>
             `);
             $('#living-room').removeClass('btn-danger');
             $('#living-room').addClass('btn-success');
@@ -731,7 +731,7 @@
           console.log(data);
           if(data == '0'){
             $('.alert-my').html(`
-              <span class="alert alert-danger">Lampu Room Mati</span>
+              <span class="alert alert-danger" style="font-size: 10px;">Lampu Dimatikan</span>
             `);
             $('#my-room').removeClass('btn-success');
             $('#my-room').addClass('btn-danger');
@@ -741,7 +741,7 @@
             })
           }else{
             $('.alert-my').html(`
-              <span class="alert alert-success">Lampu Room Nyala</span>
+              <span class="alert alert-success" style="font-size: 10px;">Lampu Dinyalakan</span>
             `);
             $('#my-room').removeClass('btn-danger');
             $('#my-room').addClass('btn-success');
@@ -755,6 +755,8 @@
       })
     })
   </script>
+
+  <!-- all room -->
   <script>
     $(document).ready(function(){
       $('#all-room').on('click', function(){
@@ -762,7 +764,7 @@
           console.log(data);
           if(data.V7 == '0' && data.V8 == '0' && data.V9 == '0' && data.V10 == '0'){
             $('.alert-all').html(`
-              <span class="alert alert-danger">Lampu All Room Mati</span>
+              <span class="alert alert-danger" style="font-size: 10px;">Semua Dimatikan</span>
             `);
             $('#all-room').removeClass('btn-success');
             $('#all-room').addClass('btn-danger');
@@ -772,7 +774,7 @@
             })
           }else{
             $('.alert-all').html(`
-              <span class="alert alert-success">Lampu All Room Nyala</span>
+              <span class="alert alert-success" style="font-size: 10px;">Semua Dinyalakan</span>
             `);
             $('#all-room').removeClass('btn-danger');
             $('#all-room').addClass('btn-success');
@@ -786,6 +788,41 @@
       })
     })
   </script>
+
+<!-- fan -->
+  <script>
+    $(document).ready(function(){
+      $('#fan-on').on('click', function(){
+        $.getJSON('https://sgp1.blynk.cloud/external/api/get?token=M8r1JtoTj2zF7UwGxDo9FUyBr-4Di7U7&V10', function(data){
+          console.log(data);
+          if(data == '0'){
+            $('.alert-fan').html(`
+              <span class="alert alert-danger" style="font-size: 10px;">Kipas Dimatikan</span>
+            `);
+            $('#fan-on').removeClass('btn-success');
+            $('#fan-on').addClass('btn-danger');
+
+            $.getJSON('https://sgp1.blynk.cloud/external/api/update?token=M8r1JtoTj2zF7UwGxDo9FUyBr-4Di7U7&V10=1', function(result){
+                console.log(result)
+            })
+          }else{
+            $('.alert-fan').html(`
+              <span class="alert alert-success" style="font-size: 10px;">Kipas Dinyalakan</span>
+            `);
+            $('#fan-on').removeClass('btn-danger');
+            $('#fan-on').addClass('btn-success');
+            $('#fan-on').css('background-color','green');
+            $.getJSON('https://sgp1.blynk.cloud/external/api/update?token=M8r1JtoTj2zF7UwGxDo9FUyBr-4Di7U7&V10=0', function(result){
+                console.log(result)
+            })
+          }
+
+        })
+      })
+    })
+  </script>
+
+  <!-- pembacaan sensor -->
   <script>
     $(document).ready(function(){
       setInterval(function(){
