--- a/beranda.html
+++ b/beranda.html
@@ -134,6 +134,12 @@
 	}
 }
 
+@media screen and (min-width: 1200px) {
+  .card-saklar{
+    width:  11rem;
+  }
+}
+
   </style>
   
 </head>
@@ -265,7 +271,7 @@
             </div>
             
         </div>
-        <div class="container container-sm container-md container-lg">
+        <div class="container">
             
             <!--Section: Main info-->
             <section class="mt-5 wow fadeIn">
@@ -275,7 +281,7 @@
         <!--Grid row-->
         <div class="row d-flex justify-content-center">
           <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mb-3">
-            <div class="card">
+            <div class="card card-saklar">
               <div class="card-body">
                 <div class="card-title">
                   <h6 class="text-center">Ruang Tamu</h6>
@@ -294,7 +300,7 @@
           </div>
 
           <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mb-3">
-            <div class="card">
+            <div class="card card-saklar">
               <div class="card-body">
                 <div class="card-title">
                   <h6 class="text-center">Kamar</h6>
@@ -313,7 +319,7 @@
           </div>
 
           <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mb-3">
-            <div class="card">
+            <div class="card card-saklar">
               <div class="card-body">
                 <div class="card-title">
                   <h6 class="text-center">Dapur</h6>
@@ -332,7 +338,7 @@
           </div>
 
           <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mb-3">
-            <div class="card">
+            <div class="card card-saklar">
               <div class="card-body">
                 <div class="card-title">
                   <h6 class="text-center">Kipas Angin</h6>
@@ -351,7 +357,7 @@
           </div>
 
           <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 mb-3">
-            <div class="card">
+            <div class="card card-saklar">
               <div class="card-body">
                 <div class="card-title">
                   <h6 class="text-center">Semua Devices</h6>
