--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
               background-image: url('images/bg5.jpg');
             }
           }
+          @media all and (max-width: 670px) {
+              .header{
+                height: 100vh;
+                background-position:  center;
+              }
+          }
     </style>
 </head>
 
