--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             background-color: transparent;
         }
         .header{
-            min-height: 600px;
-            height: 100%;
+            
+            height: 100vh;
             font-size: 72px;
             color: white;
             text-align: center;
