--- a/beranda.html
+++ b/beranda.html
@@ -214,11 +214,11 @@
                 
               </div>
 
-              <div class="">
+              <!-- <div class="">
                 <a href="#home" class="btn btn-outline-white btn-lg" style="width: 150; height: 150;">
                   <i class="fas fa-arrow-down"></i>
                 </a>
-              </div>
+              </div> -->
             </div>
             <!-- Content -->
 
