--- a/beranda.html
+++ b/beranda.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>SKIOT</title>
+  <link rel="shortcut icon" href="icon/icon.png">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.3.0/css/all.css">
   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"> -->
@@ -186,7 +187,7 @@
         <div class="view">
 
           <!-- Mask & flexbox options-->
-          <div class="mask rgba-black-light d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.6);">
+          <div class="mask rgba-black-light d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.7);">
 
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
