revisi header kelembapan

--- a/beranda.html
+++ b/beranda.html
@@ -472,7 +472,7 @@
               <div class="col-xl-12 col-lg-12">
                 <div class="card h-100" style="background-color: #87cefa;">
                   <div class="card-body">
-                    <div class="card-title text-center">
+                    <div class="card-title">
                       <h6>Kelembapan</h6>
                     </div>
                     <div class="d-flex justify-content-around">
@@ -640,7 +640,7 @@
             `);
             $('#kitchen-room-on').removeClass('btn-danger');
             $('#kitchen-room-on').addClass('btn-success');
-            
+
             $.getJSON('https://sgp1.blynk.cloud/external/api/update?token=M8r1JtoTj2zF7UwGxDo9FUyBr-4Di7U7&V8=0', function(result){
                 console.log(result)
             })
