--- a/beranda.html
+++ b/beranda.html
@@ -203,7 +203,7 @@
               <div class="row d-flex justify-content-around mb-5">
 
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
-                  <i class="fas fa-temperature-high"></i>
+                  <i class="fas fa-temperature-low"></i>
                   <strong id="temperature-celcius"></strong>                   
                 </div>
                   
