--- a/beranda.html
+++ b/beranda.html
@@ -232,7 +232,7 @@
               <div class="row d-flex justify-content-center mb-5">
 
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
-                  <i class="fas fa-temperature-low d-block mb-1"></i>
+                  <i class="fas fa-temperature-low d-block" style="font-size: 20px;"></i>
                   <strong id="temperature-celcius"></strong>                   
                 </div>
                   
