revisi tombol masuk

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Login Smarthome</title>
     <link rel="shortcut icon" href="icon/icon.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.3.0/css/all.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <style>
         .container{
             background-color: transparent;
@@ -70,7 +72,7 @@
                         <input type="password" name="password" id="password" placeholder="Password Kamu">
                     </div>
                     <div class="modal-buttons">
-                        <button class="input-button" type="button" onClick="Login()">Masuk</button>
+                        <button class="input-button" type="button" onClick="Login()"><i class="fas fa-sign-in-alt"></i> Masuk</button>
                     </div>
                 </form>
 
