revisi jarak jam

--- a/beranda.html
+++ b/beranda.html
@@ -233,7 +233,7 @@
 
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
-              <h1 class="">
+              <h1 class="mb-4">
                 <strong class="jam_digital" id="jam_digital"></strong>
                 <p class="tanggal-digital" id="tanggal-digital"></p>
               </h1>
