--- a/beranda.html
+++ b/beranda.html
@@ -464,7 +464,7 @@
                         <p class="font-weight-bold" style="font-size: 42px" id="gas-smoke"></p>   
                       </div>
                     </div>
-                    <div class="notif-smoke" style="font-size: 14px;">
+                    <div class="notif-smoke" style="font-size: 14px; width: 100%; display: block; text-align: center;">
                         <span class="alert alert-danger"></span>
                       </div>
                   </div>
